# Haohanyh-HAMOS-ProjectX

./: README.md  README_en.md
HaohanyhHAMOSProjectX Hardware/: README.md
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/: BUILD.gn  tree.txt
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/B2_basic_button/: BUILD.gn  README.md  button_example.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D11_iot_cloud_oc_infrared/: BUILD.gn  README.md  iot_cloud_oc_sample.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D11_iot_cloud_oc_infrared/include/: E53_IS1.h
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D11_iot_cloud_oc_infrared/src/: E53_IS1.c  wifi_connect.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D12_iot_cloud_oc_agriculture/: BUILD.gn  README.md  iot_cloud_oc_sample.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D12_iot_cloud_oc_agriculture/include/: E53_IA1.h  wifi_connect.h
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D12_iot_cloud_oc_agriculture/src/: E53_IA1.c  wifi_connect.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D13_iot_cloud_oc_gps/: BUILD.gn  README.md  iot_cloud_oc_sample.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D13_iot_cloud_oc_gps/include/: E53_ST1.h  wifi_connect.h
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D13_iot_cloud_oc_gps/src/: E53_ST1.c  wifi_connect.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D9_iot_cloud_oc_light/: BUILD.gn  README.md  iot_cloud_oc_sample.c
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D9_iot_cloud_oc_light/include/: E53_SC1.h
HaohanyhHAMOSProjectX Hardware/BearPi-HM_Nano/D9_iot_cloud_oc_light/src/: E53_SC1.c
HaohanyhHAMOSProjectX Hardware/Hihope/: BUILD.gn
HaohanyhHAMOSProjectX Hardware/Hihope/demo_plus/: BUILD.gn  wifi_connect_demo.c
HaohanyhHAMOSProjectX Hardware/Hihope/mqt/: BUILD.gn  at_entry.c
HaohanyhHAMOSProjectX Hardware/Hihope/oled/: README.md  aht20.h  environment_demo.c  oled_demo.c  oled_ssd1306.h
HaohanyhHAMOSProjectX Hardware/Hihope/src_plus/: BUILD.gn  wifi_connecter.h
HaohanyhHAMOSProjectX Hardware/app/: LICENSE  README.md
HaohanyhHAMOSProjectX Hardware/app/demo_plus/: wifi_connect_demo.c  wifi_hotspot_demo.c
HaohanyhHAMOSProjectX Hardware/app/mqt/: at_entry.c  mqtt_test.c  mqtt_test.h
HaohanyhHAMOSProjectX Hardware/app/oled/: BUILD.gn  aht20.c  aht20.h  colorful_light_demo.c  environment_demo.c  oled_demo.c  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h
HaohanyhHAMOSProjectX Hardware/app/src_plus/: wifi_connecter.c  wifi_connecter.h  wifi_starter.c  wifi_starter.h
HaohanyhHAMOSProjectX LICENSE/: LICENSE  README.md
HaohanyhHAMOSProjectX Resource/Hihope/SSD1306/C语言代码/: main.c
HaohanyhHAMOSProjectX Resource/Hihope/SSD1306/C语言代码/SRC/: oled.h  oledfont.h
HaohanyhHAMOSProjectX Software/app/: build.gradle
HaohanyhHAMOSProjectX Software/app/src/main/: AndroidManifest.xml
HaohanyhHAMOSProjectX Software/app/src/main/res/drawable/: activity_main_button.xml  button_nihao234234.xml  button_nihao345345.xml  ic_email_white_24dp.xml  ic_lock_white_24dp.xml  label_customize_jianbian_01.xml  label_customize_jianbian_02.xml  label_customize_jianbian_03.xml  label_customize_jianbian_04.xml  main_background.xml  (+2 more)
HaohanyhHAMOSProjectX Software/gradle/wrapper/: gradle-wrapper.properties
HaohanyhHAMOSProjectX 教程/: 1. 硬件部分代码详解.md  2. 安卓APP代码详解.md  3. 华为云API详解.md  4. 安卓联动代码详解.md
(+54 files in other folders)
